--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-proguard",
+  "name": "@globules-io/cordova-plugin-proguard",
   "version": "2.2.1",
   "description": "Cordova plugin for ProGuard",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/greybax/cordova-plugin-proguard.git"
+    "url": "git+https://github.com/globules-io/cordova-plugin-proguard.git"
   },
   "keywords": [
     "proguard",
@@ -24,9 +24,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/greybax/cordova-plugin-proguard/issues"
+    "url": "https://github.com/globules-io/cordova-plugin-proguard/issues"
   },
-  "homepage": "https://github.com/greybax/cordova-plugin-proguard#readme",
+  "homepage": "https://github.com/globules-io/cordova-plugin-proguard#readme",
   "devDependencies": {
     "jshint": "2.13.6"
   }
