--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" id="cordova-plugin-proguard" version="2.2.1">
+<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" id="@globules-io/cordova-plugin-proguard" version="2.2.1">
   <name>Cordova plugin ProGuard</name>
   <description>Activated ProGuard for Android</description>
   <platform name="android">
